# systools

./: .gitignore  README.md  apt-describe-update.py  debug-gnome-extensions.py  fetch-and-link  monitor-switch.py  mw2confluence  pyproject.toml  ssh-exit-multiplex  vpn  wacom-config
data/applications/: open-terminal.desktop  reveal-file.desktop
scripts/: desktop-colors  git-cor  hcopy  hpaste  keyboard-overview  mimecorrtype  pmvn  reveal-file  ssh-exit-multiplex  start-shell-in-dir
tv_systools/: apt_describe_update.py  apt_search.py  aptutils.py  async_utils.py  background_labels.py  choose  choose.py  clean_sync_conflicts.py  debug_gnome_extensions.py  extract_mw_backup.py  fetch_and_link.py  fix_filename_encoding.py  fix_github_remote.py  git_ignore.py  glyphinfo.py  jsontotoml.py  killbyload.py  linked_assets.py  logseq_j.py  monitor_switch.py  nco.py  notifications.py  nstotop.py  pdfshrink.py  pipxtouvtools.py  public_link.py  superwhich.py  tasmota.py  ui.py  uniqall.py  util.py  wacom_config.py
