[project]
name = "tv-systools"
version = "0.2.0"
description = "Collection of system-related small tools"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.build.wheel-data]
scripts = ["scripts/*"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
