[project]
name = "tv-systools"
version = "0.2.0"
description = "Collection of system-related small tools"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
dependencies = [
    "rich>=13.7.0",
    "python-apt @ git+https://salsa.debian.org/apt-team/python-apt.git",
    "python-dateutil>=2.8.2",
    "ruyaml>=0.91.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
apt-describe-update = "tv_systools.apt_describe_update:main"
choose = "tv_systools.choose:main"
fetch-and-link = "tv_systools.fetch_and_link:main"

[tool.pdm]
distribution = true

[tool.pdm.build.wheel-data]
scripts = ["scripts/*"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
